tests/paczka1/fuzzy1/59798546.err
Error in line 3: mYYTLGHI AP08 78,8
Error in line 1: wjQylu1GbRA S98 78,1
Error in line 23: mYYTLGHI A308 -4,5
